# ChangeLog for media-video/mpv
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/mpv/ChangeLog,v 1.115 2015/02/03 14:50:32 yngwin Exp $

  03 Feb 2015; Ben de Groot <yngwin@gentoo.org> -mpv-0.6.2.ebuild,
  -mpv-0.7.1.ebuild, -mpv-0.7.2-r1.ebuild, -mpv-0.7.2.ebuild:
  remove old

*mpv-0.7.3 (03 Feb 2015)

  03 Feb 2015; Ben de Groot <yngwin@gentoo.org> +mpv-0.7.3.ebuild:
  version bump

*mpv-0.3.11-r1 (01 Feb 2015)
*mpv-0.7.2-r1 (01 Feb 2015)

  01 Feb 2015; Michał Górny <mgorny@gentoo.org> +mpv-0.3.11-r1.ebuild,
  +mpv-0.7.2-r1.ebuild, mpv-9999.ebuild:
  Introduce USE=libav to control the preferred implementation. Fixes subslot &
  implementation switch rebuilds as well.

  05 Jan 2015; Yixun Lan <dlan@gentoo.org> mpv-9999.ebuild:
  remove USE=portaudio from live ebuild, bug 534018, thanks Perfect Gentleman,
  Nikoli

  03 Jan 2015; Michał Górny <mgorny@gentoo.org> mpv-0.3.10.ebuild,
  mpv-0.3.11.ebuild, mpv-0.6.2.ebuild, mpv-0.7.1.ebuild, mpv-0.7.2.ebuild,
  mpv-9999.ebuild:
  Use python-any-r1 for waf.

*mpv-0.7.2 (29 Dec 2014)

  29 Dec 2014; Yixun Lan <dlan@gentoo.org> -mpv-0.6.1.ebuild,
  -mpv-0.7.0.ebuild, +mpv-0.7.2.ebuild, mpv-9999.ebuild:
  version bump, bug #533780, proxy for maintainer, thanks Nikoli

  12 Dec 2014; Sergey Popov <pinkbyte@gentoo.org> metadata.xml:
  USE='vaapi' is now global, removing it's description from metadata

*mpv-0.7.1 (05 Dec 2014)

  05 Dec 2014; Maxim Koltsov <maksbotan@gentoo.org> +mpv-0.7.1.ebuild:
  Bump to 0.7.1, thanks to Nikoli.

  05 Dec 2014; Maxim Koltsov <maksbotan@gentoo.org> mpv-9999.ebuild:
  Remove libpostproc support, bug #531598. Thanks to Nikoli.

*mpv-0.7.0 (29 Nov 2014)

  29 Nov 2014; Mikle Kolyada <zlogene@gentoo.org> +mpv-0.7.0.ebuild,
  metadata.xml, mpv-9999.ebuild:
  Version bump wrt bug #530796; Thanks to Nikoli

  29 Nov 2014; Mikle Kolyada <zlogene@gentoo.org> -mpv-0.4.2.ebuild,
  -mpv-0.5.4.ebuild:
  Drop old.
