@@ -8,14 +8,26 @@ DIST smplayer-14.9.0.6690.tar.bz2 3813209 SHA256 5ec8a1d2912828e9b19f800e338029e
 DIST smplayer-14.9.0.tar.bz2 3716434 SHA256 429ad4edd6df1fcedd5ea4fa2b024eb5a61c9412f52762e9d9a9c2245b7ddf13 SHA512 78cecdad7e5f18c221a2f08a0472da01eb14db6230733616b805b6fccf2929c3f5b4dd92fd037362890a308967fa6602b89318c5376c3ce3a38d0dd9a1a17e43 WHIRLPOOL d7e621cd9ebcee450ce7aa9beaf1240c3d2f91271d2a6f043688c8688d77e8ad4761777a05ae77230966d050d647e700aa5bc8d3b566adc3fb724eaf9e315399
 EBUILD smplayer-14.3.0.ebuild 2156 SHA256 bcae6caed7f025bf9cdf96c5b352ea06a6b6c93e8474d2e7e8351779e553f052 SHA512 1e5cd636d3f5c204702b871274ebbfc25d2073a7a2208474e409094688cfc58d887a382d0c057426e4828d45a5b8cac95ebb204e33e2228117634f661c056587 WHIRLPOOL cf99299f71a139bb7e6ff7ca1811b2175d97d33f8bbd8e0479ab9118659c0f6c4af1f96535f7d4954fb0bdc716160429a00dd582507eff6b42cf913a350a1ba3
 EBUILD smplayer-14.9.0-r1.ebuild 2492 SHA256 cd73d5cbe53a8ca1ac96b7f730fd0d5a98801336ce72973e816bcd4a3feedb9e SHA512 d6c57654bd160e480e8599dcab8c205ffbfcd1b46d29a61080bb45a5ff5c3920cf8962233008590b23d958c65103f5b4d2a0a771ed85e07c253282e13cef02a8 WHIRLPOOL 74cbad48dc341fc2f02394ca3e288e2eacbee0a6613ab5f9a5aa90c963b3b8d668316ce58666f3ee1ba98e419d86c32f5d4919e898027a76af42096adf9761e0
-EBUILD smplayer-14.9.0.6690.ebuild 2815 SHA256 9334cc221d40d9cddf621d669afdc9157d317fc79b3df93a1cb5d5ccb776450d SHA512 98b5e52b079c1c622bd6266b34a869bd7019d0bcc48d2385571fa86a6364c9b92c40d38ea0cae3daba44e7bbc6f1c5deb107a65e2cfd9a4ae7a547c626b58f60 WHIRLPOOL c142ad4ad511da1ce110ded983adb9fdf45c7be8416111db423013f44d00d853f62d32969e2b2bf8f6166a999b803e0736f1b4f231bc5eb1b4deea59e6f8c344
+EBUILD smplayer-14.9.0.6690.ebuild 2790 SHA256 52ba1ae3812cc5317074f4281c2ae5af15c572144c68a8158df2df02b7f43a3f SHA512 f647f0db0b6aaf9ecc1589d74621515f557b792aa71a1031a14bd02f28f6509c7487d91b2c276ebf288b0e917f956706197977152183fe575cb872b4b30c2d08 WHIRLPOOL a74ff55813f42776d621f3640aa5b08eebf297e8f4381283e78267c45b9a53f0c0e3d90ef702152d38dcdb5eb181c3b0043e9c217fc1eacf3aed62dda6cf948d
 EBUILD smplayer-14.9.0.ebuild 2431 SHA256 f5f9668375eead2c2cb2205cfff079dce64eee340e5dcd0dcf838721694bfc14 SHA512 a9c97c77f26840651dbe1c59b29e8f1819ba1d03a87b36e3aa43b335f1dbe6c91030e857fc9965f662cc5e616165b7b7f529382265f8dd57112ef16593553d2a WHIRLPOOL c49fc2546cb44b43c0d3a47dda63e146803deeaf6d6507e98d8529e0bee7a91deba2c2d19a9d4e9aae0ff46a23f31f49bee8f5d0ce0ce44501da609a86d6ba94
-MISC ChangeLog 21355 SHA256 fdc30f312e38002762586936dce6682ebedcee5f355a89a5bd92ce1074437bd5 SHA512 06feb7485d35521578afeb8d2ef5640bd5ce83f84b380ab2bb5eb94de9d2b333e2b5f869ddf68cf41ccbda3f0264c9dabc46af18fdfe4fdef4fd78b58792108c WHIRLPOOL fe98145e6b2ee8a531fbe87f440e19849a513522cc5f7199fd7c225412de12946cf4acf1033f5b0476a5f3b0691a1e2ee1323097d2cddccbdd8d83f6dc2650ee
+MISC ChangeLog 21513 SHA256 134151f8ff0c7b8438e1cada896f5cac1ea2040de8cfaea1f91f9d2d87b239dd SHA512 adf71b507a6d54f42b2fda14f4b63ada2930e18de186a9602732dfbf50fe0104b6aeea4b4b446a9e57940722e6dda2aa4d3eb321919bb3c62606759a728e6b15 WHIRLPOOL 33ecef92662d0be055e12a31c36afd7eaa63c3a567db240daec8af13e05540de3083e6b5152ac8923d3f35742900b5a3f446f10f308f6cc50dced61a0e35de96
 MISC metadata.xml 505 SHA256 ca8bb6982e46f56f34350483c91999e947f0d30aae50bdb75dc7f8fba8e76e1b SHA512 18a3dbf2bea045c321945434a0933468d27b40cc0984d0c439a6726b25cbf978c9f9886aa09f7dbfa6c0176477095e5c5ddec4267ce52478cc92d053f0697f18 WHIRLPOOL dd5ae89b730a16d4531adc640df01b4d01fad68d8b7018f35e7dfefff3dd30c36cb6d2b3e8ff6d0332de8e639ea850985d5388435744dcbdff8f255822d4e0c6
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iEYEAREIAAYFAlTOGJoACgkQVWmRsqeSphOTxwCfWBR6ONpVjmxwEpjR6ySK/3iJ
-pTUAn0KJ7fCh7UcZDPzX3OduUhqDthjv
-=crhD
+iQJ8BAEBCABmBQJU0iJsXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ5MTlDREQ0NUU5Mjc4RkU2RjJDNTAyNzU0
+RkRGOUNGRDJGQUM1MTRFAAoJEE/fnP0vrFFOt5UQAKwPXNkpHn5Z9bJcmCo9fLDN
+yRkBd+Qn0axS0QWzF8TkN8lEfhspOlpKzEUc64i12h+SLXJ4vHUGsQyeYRokvLe0
+T467neSSpzQenKXH7CxHYMMaX26H0KkMTOeDMmwV46mgMiwwWd542HuTqA70vqyU
+Wvp32RKWU4dYKArhNRHucbCtYHxm5aFhzTByHXW73giWnBSIihHwxSWiAdCxMPtV
+YzCYvkhMEriwi3Nj2iZ4KVVf9Gei0Uje/prr3//aDCsij/mBzDvFrMfaa6FfyBoe
+1x3R4GB22m9J0gm3zzz3Y/K/3Q+gSzt20C7GGKfcmQMxFwhPVvvrc2tOmI99TT++
+S/I6wTQ39A4mtFxmyzfXfGM667g05sLK6aJxJyOjg1mZ8A5LTciO/wq/tnncXduS
+Pd05GOBgsp5DRrB+UzfEI+CAjvotBnjuezP8utPI08oPvHdZ8ftWoW2DTW594X+y
+Nw8jNbPzinwX8VDhSivyUcCEONwHsNgnbptX7QtUh17Nlgk/i/kCHZnIxc8mbI4n
+k88ddai9OnX100/mBJ9aHjd00WS6PCD09nf3jrztZsGqkv2uI1cFOm8upwP/SQGl
+aYTemlS7j1ltlrKDFoSUp0tytGwVZXL2jr7XV6pRo4cx49GdtuW/c9CrOjK2exSt
+xOnLirQSkCPKmMqEjFOL
+=RKXe
 -----END PGP SIGNATURE-----
