@@ -1,6 +1,10 @@
 # ChangeLog for media-video/mpv
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/mpv/ChangeLog,v 1.115 2015/02/03 14:50:32 yngwin Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/mpv/ChangeLog,v 1.116 2015/02/04 13:33:19 yngwin Exp $
+
+  04 Feb 2015; Ben de Groot <yngwin@gentoo.org> mpv-0.7.3.ebuild:
+  Drop keywords on mpv-0.7.3 for arches that do not have ffmpeg-2.2 keyworded
+  (bug #538802)
 
   03 Feb 2015; Ben de Groot <yngwin@gentoo.org> -mpv-0.6.2.ebuild,
   -mpv-0.7.1.ebuild, -mpv-0.7.2-r1.ebuild, -mpv-0.7.2.ebuild:
